# tokio-framecodecs

./: Cargo.toml  LICENSE  README.md  search-index.js
examples/: delimiter.rs  framed_helper.rs  multiplex.rs  remote_addr.rs  simple.rs
framecodecs/: index.html  sidebar-items.js
framecodecs/delimiter/: Delimiter.t.html  DelimiterCodec.t.html  DelimiterProto.t.html  LineDelimiter.t.html  enum.LineDelimiter.html  index.html  sidebar-items.js  struct.DelimiterCodec.html  struct.DelimiterProto.html  trait.Delimiter.html
framecodecs/fixed_length/: FixedLengthCodec.t.html  FixedLengthProto.t.html  index.html  sidebar-items.js  struct.FixedLengthCodec.html  struct.FixedLengthProto.html
framecodecs/length_field/: LengthFieldCodec.t.html  LengthFieldProto.t.html  index.html  sidebar-items.js  struct.LengthFieldCodec.html  struct.LengthFieldProto.html
framecodecs/remote_addr/: RemoteAddrCodec.t.html  RemoteAddrProto.t.html  index.html  sidebar-items.js  struct.RemoteAddrCodec.html  struct.RemoteAddrProto.html
framecodecs/request_id_field/: RequestIdFieldCodec.t.html  RequestIdFieldProto.t.html  index.html  sidebar-items.js  struct.RequestIdFieldCodec.html  struct.RequestIdFieldProto.html
framecodecs/varint/: VarIntLengthFieldCodec.t.html  VarIntLengthFieldProto.t.html  index.html  sidebar-items.js  struct.VarIntLengthFieldCodec.html  struct.VarIntLengthFieldProto.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
src/: decode_to_vec.rs  delimiter.rs  fixed_length.rs  framed_helper.rs  length_field.rs  lib.rs  remote_addr.rs  request_id_field.rs  varint.rs
src/frame/: delimiter.rs  fixed_length.rs  length_field.rs  mod.rs  varint.rs
src/framecodecs/: delimiter.rs.html  fixed_length.rs.html  length_field.rs.html  lib.rs.html  remote_addr.rs.html  request_id_field.rs.html  varint.rs.html
(+7 files in other folders)
