[package]
name = "framecodecs"
version = "0.1.0"
authors = ["sinkuu <sinkuupump@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Implementing simple protocols like delimiter or fixed-length"
repository = "https://github.com/sinkuu/tokio-framecodecs"
readme = "README.md"
documentation = "https://docs.rs/framecodecs"

[dependencies]
tokio-core = "0.1.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
futures = "0.1.6"
log = "0.3"
memchr = "0.1.11"
byteorder = "0.5.3"
