[package]
authors = ["sinkuu <sinkuupump@gmail.com>"]
description = "Implementing simple protocols like delimiter or fixed-length"
documentation = "https://docs.rs/framecodecs"
license = "MIT/Apache-2.0"
name = "framecodecs"
readme = "README.md"
repository = "https://github.com/sinkuu/tokio-framecodecs"
version = "0.1.0"

[dependencies]
byteorder = "1.0.0"
log = "0.3"
memchr = "1.0.1"
tokio-core = "0.1.3"
twoway = "0.1.3"
tokio-proto = "0.1.0"
tokio-service = "0.1.0"

[dependencies.futures]
default-features = false
features = ["use_std"]
version = "0.1.6"

[dev-dependencies.service-fn]
git = "https://github.com/tokio-rs/service-fn"
